# PathogenFinder2

./: .gitmodules  README.md  config_model.py  conv1d_addatt_STD.py  data_utils.py  dockerfile_PF2  dockerfile_callCGEPF2  hyperparam_opt.py  hyperparam_sel.py  model.py  prediction.py  pyproject.toml  results_record.py  test_model.py  todo.txt  train_model.py  utils.py
auxiliary_code/: analyse_data.py  pca_reshape.py
configs/: base_repr_run.json  base_run.json  config2_debug.json  config_addatt.json  config_base.json  config_conv1d.json  config_conv1daddatt.json  config_densenet.json  config_densenetaddatt.json  config_input1.json  config_input2.json  config_input3.json  config_input_debug.json  config_input_debugoptback.json  config_input_l1.json  config_input_l2.json  config_orig_inference.json  config_orig_inference1.json  config_orig_inference2.json  config_orig_inference3.json  config_orig_inference4.json  config_orig_inference5.json  config_orig_inference6.json  config_orig_test.json
configs/new_generation/: config_addatt.json  config_conv1d.json  config_conv1daddatt.json  config_convnext.json  config_convnextaddatt.json  config_densenet.json  hyperparam_convnextaddatt.json
data/: mean_std_REPRtrain.npz  mean_std_train.npz
data/configs/: config_empty.json
data/models_weights/: weights_model2.pickle  weights_model4.pickle
models/: addatt_STD.py  conv1d_STD.py  conv1d_addatt_STD.py  convnext_STD.py  convnext_addatt_STD.py  densenet_STD.py  densenet_addatt_STD.py  fnn_STD.py
models/layers/: attention.py  classifier.py  convnextblock.py  denseblock.py  utils.py
models_weights/: weights_model1.pickle  weights_model3.pickle
src/CGE_app/: config_empty.json
src/ExtraPhenotype/: embedding_PF2feature.py  pathogenfinder2_phenotype.py  protein_PF2feature.py
src/MakeDB/DB/cleaners_metadata/: clean_HMP.py  clean_ena.py  clean_extremophiles.py  clean_ncbipathogen.py  clean_patric.py  compare_db.py  compare_metadatas.py  download_strains.py  ecoli_het.py  het_ecoli_pheno.tsv  hetero_sp.py  join_dbs.py  meh.tsv
src/PathogenFinder/: __init__.py  pathogenfinder2.py  pathogenfinder2_mapping.py  pathogeninder2.py  prott5_embedder.py
src/PathogenFinder/dl/: model.py
src/PathogenFinder/dl/dl_functions/: __init__.py  inference_model.py  model.py  test_model.py  train_model.py
src/PathogenFinder/dl/models/: __init__.py  addatt.py  conv1d.py  conv1d_addatt.py  convnext.py  convnext_addatt.py  convnext_addatt_old.py  densenet.py  densenet_addatt.py  fnn.py
src/PathogenFinder/postprocessdata/: embedding_PF2feature.py  protein_PF2feature.py
src/PathogenFinder/preprocessdata/: __init__.py  extract_proteins.py  predict_proteins.py  prott5_embedder.py
src/PathogenFinder/utils/: __init__.py  configuration_module.py  configuration_utils.py  file_utils.py  metrics_utils.py  os_utils.py
test/: config_inference.json  config_test.json  config_train.json
test/configs/: config_test.json  config_train.json  config_trainfinal3_v4.json
test/metadata/: multiple_files.tsv  phenotypes_multi.tsv  repr_metadataTEST90.tsv  repr_metadataTRAIN90.tsv
(+10 files in other folders)
